3 October 2019: Wouter
	- Merge #90 from vcunat: fix build with nettle-3.5.
	- Merge 1.9.4 release with fix for vulnerability CVE-2019-16866.
	- Continue with development of 1.9.5.

26 September 2019: Wouter
	- Merge #87 from hardfalcon: Fix contrib/unbound.service.in,
	  Drop CAP_KILL, use + prefix for ExecReload= instead.

25 September 2019: Wouter
	- The unbound.conf includes are sorted ascending, for include
	  statements with a '*' from glob.

23 September 2019: Wouter
	- Merge #85 for #84 from sam-lunt: Add kill capability to systemd
	  service file to fix that systemctl reload fails.

20 September 2019: Wouter
	- Merge #82 from hardfalcon: Downgrade CAP_NET_ADMIN to CAP_NET_RAW
	  in unbound.service.
	- Merge #81 from Maryse47: Consistently use /dev/urandom instead
	  of /dev/random in scripts and docs.
	- Merge #83 from Maryse47: contrib/unbound.service.in: do not fork
	  into the background.

19 September 2019: Wouter
	- Fix #78: Memory leak in outside_network.c.
	- Merge pull request #76 from Maryse47: Improvements and fixes for
	  systemd unbound.service.
	- oss-fuzz badge on README.md.
	- Fix fix for #78 to also free service callback struct.
	- Fix for oss-fuzz build warning.
	- Fix wrong response ttl for prepended short CNAME ttls, this would
	  create a wrong zero_ttl response count with serve-expired enabled.
	- Merge #80 from stasic: Improve wording in man page.

11 September 2019: Wouter
	- Use explicit bzero for wiping clear buffer of hash in cachedb,
	  reported by Eric Sesterhenn from X41 D-Sec.

9 September 2019: Wouter
	- Fix #72: configure --with-syslog-facility=LOCAL0-7 with default
	  LOG_DAEMON (as before) can set the syslog facility that the server
	  uses to log messages.

4 September 2019: Wouter
	- Fix #71: fix openssl error squelch commit compilation error.

3 September 2019: Wouter
	- squelch DNS over TLS errors 'ssl handshake failed crypto error'
	  on low verbosity, they show on verbosity 3 (query details), because